--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,10 @@ authors = ["Oren Ben-Kiki <oren@ben-kiki.org>"]
 version = "0.1.0"
 
 [deps]
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
+Colors = "0.13"
 Reexport = "1"
 julia = "1.11"
