--- a/Project.toml
+++ b/Project.toml
@@ -5,9 +5,11 @@ version = "0.1.0"
 
 [deps]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
 Colors = "0.13"
+PlotlyJS = "0.18"
 Reexport = "1"
 julia = "1.11"
