--- a/Project.toml
+++ b/Project.toml
@@ -4,11 +4,13 @@ authors = ["Oren Ben-Kiki <oren@ben-kiki.org>"]
 version = "0.1.0"
 
 [deps]
+ColorVectorSpace = "c3611d14-8923-5661-9e6a-0046d554d3a4"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
+ColorVectorSpace = "0.11.0"
 Colors = "0.13"
 PlotlyJS = "0.18"
 Reexport = "1"
