--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ ColorVectorSpace = "c3611d14-8923-5661-9e6a-0046d554d3a4"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
+NamedArrays = "86f7a689-2022-50b4-a561-43c23ac3c673"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Slanter = "1cad5224-2ad1-4081-af24-4feffd23c4f4"
@@ -19,6 +20,7 @@ ColorVectorSpace = "0.11.0"
 Colors = "0.13"
 Distances = "0.10.12"
 KernelDensity = "0.6.9"
+NamedArrays = "0.10.4"
 PlotlyJS = "0.18"
 Reexport = "1"
 Slanter = "0.1.0"
